--- a/notes.html
+++ b/notes.html
@@ -82,9 +82,9 @@
     .container .star {
 
     position: absolute;
-    top: 45.3%;
+    top: 45.1%;
     left: 12.6%;
-    width:320px;
+    width:25%;
     height:auto;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)
@@ -96,7 +96,7 @@
     position: absolute;
     top: 127.4%;
     left: 69.6%;
-    width:430px;
+    width:30%;
     height:auto;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)
@@ -130,7 +130,7 @@
     <p><a class="custom-cursor" href="https://www.nicorette.com.au/getting-ready-to-quit/ways-to-quit-smoking" style="color: #dd71f0"> guide on how to quit smoking</a></p>
     <h2>the creative process</h2>
     <img src="thecreativeprocess/thecreativeprocess.png" style="width:1050px; margin-left:228px">
-    <img class="heart"; src="pages/notes/doodles/heart.png">
+    <!-- <img class="heart"; src="pages/notes/doodles/heart.png"> -->
     <img class="star"; src="pages/notes/doodles/star.png">
     <img class="shape"; src="pages/notes/doodles/shape.png">
 
