--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     width: 100%; /* Ensure the image doesn't exceed the width of the pop-up */
     height: 100%; /* Ensure the image doesn't exceed the height of the pop-up */
     position: absolute;
-    object-fit: contain;
+    object-fit: cover;
   }
 
 
