--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
         margin: 0;
         }
 
+  .container .time {
+    position: absolute;
+      top: 34.2%;
+      left: 50.04%;
+      transform: translate(-50%, -50%);
+      color: #d3d1d1;
+      font-size: 185%;
+    }
+
 
 
       /* Styling for the pop-up window */
