--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@
       color: #d3d1d1;
       font-size: 185%;
     }
-
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .time {
+    top: 34%;
+    left: 50.04%;
+    font-size: 280%;
+  }
+}
 
 
       /* Styling for the pop-up window */
