--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     top:-0.7%;
     right: 1.47%;
     color: #6cf430;
-    font-size:200%;
+    font-size: 2.3vw;
     opacity:0.96;
     cursor: url("emojis/pointyfingerbig.png"), auto;
     z-index: 9999;
