--- a/notes.html
+++ b/notes.html
@@ -70,8 +70,8 @@
     .container .heart {
 
     position: absolute;
-    top: 125.55%;
-    left: 36.5%;
+    top: 125.55vh;
+    left: 36.5vw;
     width:26px;
     height:auto;
     transform: translate(-50%, -50%);
@@ -82,8 +82,8 @@
     .container .star {
 
     position: absolute;
-    top: 45.1%;
-    left: 12.6%;
+    top: 45vh;
+    left: 11.5vw;
     width:25%;
     height:auto;
     transform: translate(-50%, -50%);
@@ -94,8 +94,8 @@
     .container .shape {
 
     position: absolute;
-    top: 127.4%;
-    left: 69.6%;
+    top: 130vh;
+    left: 70vw;
     width:30%;
     height:auto;
     transform: translate(-50%, -50%);
@@ -130,7 +130,7 @@
     <p><a class="custom-cursor" href="https://www.nicorette.com.au/getting-ready-to-quit/ways-to-quit-smoking" style="color: #dd71f0"> guide on how to quit smoking</a></p>
     <h2>the creative process</h2>
     <img src="thecreativeprocess/thecreativeprocess.png" style="width:1050px; margin-left:228px">
-    <!-- <img class="heart"; src="pages/notes/doodles/heart.png"> -->
+    <img class="heart"; src="pages/notes/doodles/heart.png">
     <img class="star"; src="pages/notes/doodles/star.png">
     <img class="shape"; src="pages/notes/doodles/shape.png">
 
