--- a/notes.html
+++ b/notes.html
@@ -130,7 +130,7 @@
     <p><a class="custom-cursor" href="https://www.nicorette.com.au/getting-ready-to-quit/ways-to-quit-smoking" style="color: #dd71f0"> guide on how to quit smoking</a></p>
     <h2>the creative process</h2>
     <img src="thecreativeprocess/thecreativeprocess.png" style="width:1050px; margin-left:228px">
-    <img class="heart"; src="pages/notes/doodles/heart.png">
+    <!-- <img class="heart"; src="pages/notes/doodles/heart.png"> -->
     <img class="star"; src="pages/notes/doodles/star.png">
     <img class="shape"; src="pages/notes/doodles/shape.png">
 
