--- a/notes.html
+++ b/notes.html
@@ -70,8 +70,8 @@
     .container .heart {
 
     position: absolute;
-    top: 125.55vh;
-    left: 36.5vw;
+    top: 125.55%;
+    left: 36.5%;
     width:26px;
     height:auto;
     transform: translate(-50%, -50%);
@@ -82,8 +82,8 @@
     .container .star {
 
     position: absolute;
-    top: 45vh;
-    left: 11.5vw;
+    top: 45.1%;
+    left: 12.6%;
     width:25%;
     height:auto;
     transform: translate(-50%, -50%);
@@ -94,8 +94,8 @@
     .container .shape {
 
     position: absolute;
-    top: 130vh;
-    left: 70vw;
+    top: 127.4%;
+    left: 69.6%;
     width:30%;
     height:auto;
     transform: translate(-50%, -50%);
