--- a/homescreen.html
+++ b/homescreen.html
@@ -188,6 +188,69 @@ margin: 0;
 
 
 
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .cameraapp{
+    top: 33.1vh;
+    left: 45.2%;
+  }
+}
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .spotifyapp{
+    top: 33.1vh;
+    left: 48.35%;   
+  }
+}
+
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .safariapp{
+    top: 33.1vh;
+    left: 51.52%;  
+  }
+}
+
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .thesnakegame{
+    top: 33.1vh;
+    left: 54.7%; 
+  }
+}
+
+
+/* Boxes: */
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .boxcamera{
+    top: 33.1vh;
+    left: 45.2%;
+  }
+}
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .boxsafari{
+    top: 33.1vh;
+    left: 51.52%;  
+  }
+}
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .boxthesnakegame{
+    top: 33.1vh;
+    left: 54.7%; 
+  }
+}
+
+
+
 </style>
 
 
