--- a/homescreen.html
+++ b/homescreen.html
@@ -104,7 +104,7 @@ width:2.52%;
 .container .notesapp {
 
 position: absolute;
-top: 39.15vh;
+top: 39.1vh;
 left: 45.2%;
 transform: translate(-50%, -50%);
 -ms-transform: translate(-50%, -50%);
@@ -175,7 +175,7 @@ margin: 0;
 .container .boxnotes {
 
 position: absolute;
-top: 39.15vh;
+top: 39.1vh;
 left: 45.2%;
 transform: translate(-50%, -50%);
 -ms-transform: translate(-50%, -50%);
@@ -187,11 +187,12 @@ margin: 0;
 }
 
 
+/* Media Queries: */
 
 /* Media query for larger screens */
 @media screen and (min-width: 2000px) {
   .container .cameraapp{
-    top: 33.1vh;
+    top: 32.9vh;
     left: 45.2%;
   }
 }
@@ -199,7 +200,7 @@ margin: 0;
 /* Media query for larger screens */
 @media screen and (min-width: 2000px) {
   .container .spotifyapp{
-    top: 33.1vh;
+    top: 32.9vh;
     left: 48.35%;   
   }
 }
@@ -208,7 +209,7 @@ margin: 0;
 /* Media query for larger screens */
 @media screen and (min-width: 2000px) {
   .container .safariapp{
-    top: 33.1vh;
+    top: 32.9vh;
     left: 51.52%;  
   }
 }
@@ -217,7 +218,7 @@ margin: 0;
 /* Media query for larger screens */
 @media screen and (min-width: 2000px) {
   .container .thesnakegame{
-    top: 33.1vh;
+    top: 32.9vh;
     left: 54.7%; 
   }
 }
@@ -228,7 +229,7 @@ margin: 0;
 /* Media query for larger screens */
 @media screen and (min-width: 2000px) {
   .container .boxcamera{
-    top: 33.1vh;
+    top: 32.9vh;
     left: 45.2%;
   }
 }
@@ -236,7 +237,7 @@ margin: 0;
 /* Media query for larger screens */
 @media screen and (min-width: 2000px) {
   .container .boxsafari{
-    top: 33.1vh;
+    top: 32.9vh;
     left: 51.52%;  
   }
 }
@@ -244,7 +245,7 @@ margin: 0;
 /* Media query for larger screens */
 @media screen and (min-width: 2000px) {
   .container .boxthesnakegame{
-    top: 33.1vh;
+    top: 32.9vh;
     left: 54.7%; 
   }
 }
