--- a/notes.html
+++ b/notes.html
@@ -104,9 +104,30 @@
 
 
     .custom-cursor {
-        cursor: url("emojis/pointyfingerbig.png"), auto;
+        cursor: url("emojis/pointyfingerbig.png"), auto;        
+}
+
+
+
+/* Media Queries: */
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .heart{
+    top: 130%;
+    left: 36.7%;
+  }
 }
     
+
+
+/* Media query for larger screens */
+@media screen and (min-width: 2000px) {
+  .container .shape{
+    top: 132.4%;
+    left: 69.6%;
+  }
+}
 
 
 </style>
