--- a/notes.html
+++ b/notes.html
@@ -94,8 +94,8 @@
     .container .shape {
 
     position: absolute;
-    top: 127.4%;
-    left: 69.6%;
+    top: 134.4%;
+    left: 65.6%;
     width:30%;
     height:auto;
     transform: translate(-50%, -50%);
@@ -112,10 +112,22 @@
 /* Media Queries: */
 
 /* Media query for larger screens */
+
+
+@media screen and (min-width: 2000px) {
+  .container .star{
+    top: 46.2%;
+    left: 12.6%;
+  }
+}
+
+
+
+
 @media screen and (min-width: 2000px) {
   .container .heart{
-    top: 140%;
-    left: 36.7%;
+    top: 138.5%;
+    left: 36%;
   }
 }
     
@@ -125,7 +137,7 @@
 @media screen and (min-width: 2000px) {
   .container .shape{
     top: 144.4%;
-    left: 69.6%;
+    left: 68.2%;
   }
 }
 
