--- a/notes.html
+++ b/notes.html
@@ -162,7 +162,7 @@
     <p><a class="custom-cursor" href="https://www.dutchgraphicroots.nl/en/jan-van-toorn-2/" style="color: #dd71f0">Jan van Toorn's graphic design work</a></p>
     <p><a class="custom-cursor" href="https://www.nicorette.com.au/getting-ready-to-quit/ways-to-quit-smoking" style="color: #dd71f0"> guide on how to quit smoking</a></p>
     <h2>the creative process</h2>
-    <img src="thecreativeprocess/thecreativeprocess.png" style="width:72%; margin-left:15%">
+    <img src="thecreativeprocess/thecreativeprocess.png" style="width:72%; margin-left:15%; margin-right:15%">
     <img class="heart"; src="pages/notes/doodles/heart.png">
     <img class="star"; src="pages/notes/doodles/star.png">
     <img class="shape"; src="pages/notes/doodles/shape.png">
