--- a/pornhub.html
+++ b/pornhub.html
@@ -71,6 +71,19 @@
         }
 
 
+/* Media Queries: */
+
+/* Media query for larger screens */
+
+
+@media screen and (min-width: 2000px) {
+  .container .PornAddiction{
+    width:61.7%;
+  }
+}
+  
+
+
 
 #myVideo::-webkit-media-controls-play-button,
 #myVideo::-webkit-media-controls-pause-button,
