--- a/thesnakegame.html
+++ b/thesnakegame.html
@@ -17,7 +17,7 @@ Source code is available here: https://github.com/patorjk/JavaScript-Snake
     <style>
       .snake-toolbar {
         position: absolute;
-        top:0px;
+        top:0%;
         left:0.38%;
         z-index:10000;
         padding: 0px;
@@ -50,8 +50,9 @@ if (navigator.onLine && window.location.hostname === 'patorjk.com') {
    
         
       </div>
+     
       <div style="display:inline-block;margin-right:Opx;">
-        <span>Difficulty:</span>
+        <span style="margin-left: 1.3%;">Difficulty:</span>
         <select id="selectMode">
             <option value="100">Easy</option>
             <option value="75" selected>Medium</option>
