--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     top:-0.7%;
     right: 1.47%;
     color: #6cf430;
-    font-size: 2.3vw;
+    font-size: 2.2vw;
     opacity:0.96;
     cursor: url("emojis/pointyfingerbig.png"), auto;
     z-index: 9999;
@@ -140,10 +140,10 @@
 
 <div class="container">
   <img src="space/space.png"; height="100%"; width="100%">
-  <img src="iphone/iphonescreen2.png"; class="iPhone">
+  <!-- <img src="iphone/iphonescreen2.png"; class="iPhone"> -->
   <img class="earthspinning" src="iphone/earthspinningslow.gif">
   <a href="homescreen.html"><div class="boxearth"></div></a>
-  <div class="time"></div>
+  <!-- <div class="time"></div> -->
 
 </div>
 
@@ -151,7 +151,7 @@
   <!-- Close button -->
   <span class="close-btn" onclick="closePopup()">&times;</span>
   <!-- Image -->
-  <img src="popupwindow/popupwindow.png" alt="Image">
+  <img src="popupwindow/popupwindow2.png" alt="Image">
 </div>
 
 
