--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>unlock</title>
-  <link rel="icon" type="text/css" href="favicon/lockfavicon.png">
+  <title>hello!</title>
+  <link rel="icon" type="text/css" href="favicon/wave.png">
   <link rel="stylesheet" href="./lockscreen.css">
 
 </head>
